--- a/src/assets/locale/locale.constant-en_US_bk.json
+++ b/src/assets/locale/locale.constant-en_US_bk.json
@@ -1,9 +1,9 @@
 {
     "access": {
-        "unauthorized": "Không có quyền",
-        "unauthorized-access": "Không có quyền truy cập",
-        "unauthorized-access-text": "Bạn cần đăng nhập để truy cập tài nguyên này",
-        "access-forbidden": "Cấm truy cập",
+        "unauthorized": "Unauthorized",
+        "unauthorized-access": "Unauthorized Access",
+        "unauthorized-access-text": "You should sign in to have access to this resource!",
+        "access-forbidden": "Access Forbidden",
         "access-forbidden-text": "You haven't access rights to this location!<br/>Try to sign in with different user if you still wish to gain access to this location.",
         "refresh-token-expired": "Session has expired",
         "refresh-token-failed": "Unable to refresh session",
@@ -11,24 +11,24 @@
         "permission-denied-text": "You don't have permission to perform this operation!"
     },
     "action": {
-        "activate": "Kích hoạt",
-        "suspend": "Tạm đình chỉ",
-        "save": "Lưu",
-        "saveAs": "Lưu tại",
-        "cancel": "Hủy",
-        "ok": "Đồng ý",
-        "delete": "Xóa",
-        "add": "Thêm",
-        "yes": "Chấp nhận",
-        "no": "Từ chối",
-        "update": "Cập nhật",
-        "remove": "Gỡ bỏ",
-        "select": "Lựa chọn",
-        "search": "Tìm kiếm",
-        "clear-search": "Xóa tìm kiếm",
-        "assign": "Giao",
-        "unassign": "Thu hồi",
-        "share": "Chia sẻ",
+        "activate": "Activate",
+        "suspend": "Suspend",
+        "save": "Save",
+        "saveAs": "Save as",
+        "cancel": "Cancel",
+        "ok": "OK",
+        "delete": "Delete",
+        "add": "Add",
+        "yes": "Yes",
+        "no": "No",
+        "update": "Update",
+        "remove": "Remove",
+        "select": "Select",
+        "search": "Search",
+        "clear-search": "Clear search",
+        "assign": "Assign",
+        "unassign": "Unassign",
+        "share": "Share",
         "make-private": "Make private",
         "apply": "Apply",
         "apply-changes": "Apply changes",
@@ -365,13 +365,13 @@
         "any-relation": "any"
     },
     "asset": {
-        "asset": "Đối tượng",
-        "assets": "Đối tượng",
-        "management": "Quản lý đối tượng",
-        "view-assets": "Hiển thị chi tiết đối tượng",
-        "add": "Thêm đối tượng",
-        "assign-to-customer": "Assign to Khách hàng",
-        "assign-asset-to-customer": "Giao đối tượng cho khách hàng",
+        "asset": "Asset",
+        "assets": "Assets",
+        "management": "Asset management",
+        "view-assets": "View Assets",
+        "add": "Add Asset",
+        "assign-to-customer": "Assign to customer",
+        "assign-asset-to-customer": "Assign Asset(s) To Customer",
         "assign-asset-to-customer-text": "Please select the assets to assign to the customer",
         "no-assets-text": "No assets found",
         "assign-to-customer-text": "Please select the customer to assign the asset(s)",
@@ -431,7 +431,7 @@
         "help-text": "Use '%' according to need: '%asset_name_contains%', '%asset_name_ends', 'asset_starts_with'.",
         "import": "Import assets",
         "asset-file": "Asset file",
-        "label": "Nhãn hiệu",
+        "label": "Label",
         "search": "Search assets",
         "assign-asset-to-edge": "Assign Asset(s) To Edge",
         "unassign-asset-from-edge": "Unassign asset",
@@ -583,11 +583,11 @@
         "title": "Unsaved changes"
     },
     "contact": {
-        "country": "Đất nước",
-        "city": "Thành phố",
-        "state": "Tỉnh",
-        "postal-code": "Mã Zip-code",
-        "postal-code-invalid": "Sai code",
+        "country": "Country",
+        "city": "City",
+        "state": "State / Province",
+        "postal-code": "Zip / Postal Code",
+        "postal-code-invalid": "Invalid Zip / Postal Code format.",
         "address": "Address",
         "address2": "Address 2",
         "phone": "Phone",
@@ -595,10 +595,10 @@
         "no-address": "No address"
     },
     "common": {
-        "username": "Tên đăng nhập",
-        "password": "Mật khẩu",
-        "enter-username": "Nhập vào tên đăng nhập",
-        "enter-password": "Nhập vào mật khẩu",
+        "username": "Username",
+        "password": "Password",
+        "enter-username": "Enter username",
+        "enter-password": "Enter password",
         "enter-search": "Enter search",
         "created-time": "Created time",
         "loading": "Loading...",
@@ -610,9 +610,9 @@
         "binary": "Binary (Base64)"
     },
     "customer": {
-        "customer": "Khách hàng",
-        "customers": "Khách hàng",
-        "management": "Quản lý khách hàng",
+        "customer": "Customer",
+        "customers": "Customers",
+        "management": "Customer management",
         "dashboard": "Customer Dashboard",
         "dashboards": "Customer Dashboards",
         "devices": "Customer Devices",
@@ -646,7 +646,7 @@
         "manage-assets": "Manage assets",
         "manage-devices": "Manage devices",
         "manage-dashboards": "Manage dashboards",
-        "title": "Nhóm khách hàng",
+        "title": "Title",
         "title-required": "Title is required.",
         "description": "Description",
         "details": "Details",
@@ -693,7 +693,7 @@
         "no-dashboards-text": "No dashboards found",
         "no-widgets": "No widgets configured",
         "add-widget": "Add new widget",
-        "title": "Nhóm",
+        "title": "Title",
         "image": "Dashboard image",
         "mobile-app-settings": "Mobile application settings",
         "mobile-order": "Dashboard order in mobile application",
@@ -847,7 +847,7 @@
     "datakey": {
         "settings": "Settings",
         "advanced": "Advanced",
-        "label": "Nhãn hiệu",
+        "label": "Label",
         "color": "Color",
         "units": "Special symbol to show next to value",
         "decimals": "Number of digits after floating point",
@@ -875,7 +875,7 @@
     "datasource": {
         "type": "Datasource type",
         "name": "Name",
-        "label": "Nhãn hiệu",
+        "label": "Label",
         "add-datasource-prompt": "Please add datasource"
     },
     "details": {
@@ -885,9 +885,9 @@
         "toggle-edit-mode": "Toggle edit mode"
     },
     "device": {
-        "device": "Thiết bị",
+        "device": "Device",
         "device-required": "Device is required.",
-        "devices": "Thiết bị",
+        "devices": "Devices",
         "management": "Device management",
         "view-devices": "View Devices",
         "device-alias": "Device alias",
@@ -1004,7 +1004,7 @@
         "name": "Name",
         "name-required": "Name is required.",
         "description": "Description",
-        "label": "Nhãn hiệu",
+        "label": "Label",
         "events": "Events",
         "details": "Details",
         "copyId": "Copy device Id",
@@ -1040,8 +1040,8 @@
         "unassign-devices-from-edge-text": "After the confirmation all selected devices will be unassigned and won't be accessible by the edge."
     },
     "device-profile": {
-        "device-profile": "Hồ sơ thiết bị",
-        "device-profiles": "Hồ sơ thiết bị",
+        "device-profile": "Device profile",
+        "device-profiles": "Device profiles",
         "all-device-profiles": "All",
         "add": "Add device profile",
         "edit": "Edit device profile",
@@ -1464,7 +1464,7 @@
         "make-private-edge-title": "Are you sure you want to make the edge '{{edgeName}}' private?",
         "make-private-edge-text": "After the confirmation the edge and all its data will be made private and won't be accessible by others.",
         "import": "Import edge",
-        "label": "Nhãn hiệu",
+        "label": "Label",
         "load-entity-error": "Failed to load data. Entity has been deleted.",
         "assign-new-edge": "Assign new edge",
         "unassign-from-edge": "Unassign from edge",
@@ -1665,18 +1665,18 @@
         "created-time": "Created time",
         "name": "Name",
         "type": "Type",
-        "first-name": "Họ",
-        "last-name": "Tên",
+        "first-name": "First name",
+        "last-name": "Last name",
         "email": "Email",
-        "title": "Nhóm khách hàng",
-        "country": "Đất nước",
+        "title": "Title",
+        "country": "Country",
         "state": "State",
-        "city": "Thành phố",
+        "city": "City",
         "address": "Address",
         "address2": "Address 2",
         "zip": "Zip",
         "phone": "Phone",
-        "label": "Nhãn hiệu"
+        "label": "Label"
     },
     "entity-view": {
         "entity-view": "Entity View",
@@ -2137,7 +2137,7 @@
             "file-storage": "File storage",
             "memory-storage": "Memory storage"
         },
-        "thingsboard": "IOT Platform",
+        "thingsboard": "ThingsBoard",
         "thingsboard-host": "ThingsBoard host",
         "thingsboard-host-required": "Host is required.",
         "thingsboard-port": "ThingsBoard port",
@@ -2195,7 +2195,7 @@
         "column-type": {
             "name": "Name",
             "type": "Type",
-            "label": "Nhãn hiệu",
+            "label": "Label",
             "column-type": "Column type",
             "client-attribute": "Client attribute",
             "shared-attribute": "Shared attribute",
@@ -2272,25 +2272,25 @@
         }
     },
     "login": {
-        "login": "Đăng nhập",
-        "request-password-reset": "Yêu cầu khởi tạo lại mật khẩu",
-        "reset-password": "Khởi tạo lại mật khẩu",
-        "create-password": "Tạo mật khẩu",
-        "passwords-mismatch-error": "Mật khẩu hai lần phải giống nhau",
-        "password-again": "Nhập lại mật khẩu",
+        "login": "Login",
+        "request-password-reset": "Request Password Reset",
+        "reset-password": "Reset Password",
+        "create-password": "Create Password",
+        "passwords-mismatch-error": "Entered passwords must be same!",
+        "password-again": "Password again",
         "sign-in": "Please sign in",
-        "username": "Tên đăng nhập (email)",
+        "username": "Username (email)",
         "remember-me": "Remember me",
-        "forgot-password": "Quên mật khẩu?",
-        "password-reset": "Reset mật khẩu",
-        "expired-password-reset-message": "Mật khẩu của bạn đã bị hết hạn, vui lòng tạo lại mật khẩu",
-        "new-password": "Mật khẩu mới",
-        "new-password-again": "Nhập lại mật khẩu mới",
-        "password-link-sent-message": "Đường liên kết đã được gửi",
+        "forgot-password": "Forgot Password?",
+        "password-reset": "Password reset",
+        "expired-password-reset-message": "Your credentials has been expired! Please create new password.",
+        "new-password": "New password",
+        "new-password-again": "New password again",
+        "password-link-sent-message": "Reset link has been sent",
         "email": "Email",
-        "login-with": "Đăng nhập với {{name}}",
+        "login-with": "Login with {{name}}",
         "or": "or",
-        "error": "Đăng nhập bị lỗi"
+        "error": "Login error"
     },
     "ota-update": {
       "add": "Add package",
@@ -2764,19 +2764,19 @@
         "interval": "Interval"
     },
     "user": {
-        "user": "Người dùng",
-        "users": "Người dùng",
-        "customer-users": "KH",
-        "tenant-admins": "Quản trị",
+        "user": "User",
+        "users": "Users",
+        "customer-users": "Customer Users",
+        "tenant-admins": "Tenant Admins",
         "sys-admin": "System administrator",
         "tenant-admin": "Tenant administrator",
-        "customer": "Khách hàng",
+        "customer": "Customer",
         "anonymous": "Anonymous",
-        "add": "Thêm người dùng",
-        "delete": "Xóa người dùng",
-        "add-user-text": "Thêm mới người dùng",
-        "no-users-text": "Không tìm thấy người dùng",
-        "user-details": "Chi tiết người dùng",
+        "add": "Add User",
+        "delete": "Delete user",
+        "add-user-text": "Add new user",
+        "no-users-text": "No users found",
+        "user-details": "User details",
         "delete-user-title": "Are you sure you want to delete the user '{{userEmail}}'?",
         "delete-user-text": "Be careful, after the confirmation the user and all related data will become unrecoverable.",
         "delete-users-title": "Are you sure you want to delete { count, plural, 1 {1 user} other {# users} }?",
@@ -2785,19 +2785,19 @@
         "activation-email-sent-message": "Activation email was successfully sent!",
         "resend-activation": "Resend activation",
         "email": "Email",
-        "email-required": "Yêu cầu Email",
-        "invalid-email-format": "Tên đăng nhập không phải email",
-        "first-name": "Họ",
-        "last-name": "Và Tên",
+        "email-required": "Email is required.",
+        "invalid-email-format": "Invalid email format.",
+        "first-name": "First Name",
+        "last-name": "Last Name",
         "description": "Description",
         "default-dashboard": "Default dashboard",
         "always-fullscreen": "Always fullscreen",
         "select-user": "Select user",
         "no-users-matching": "No users matching '{{entity}}' were found.",
         "user-required": "User is required",
-        "activation-method": "Phương thức kích hoạt",
-        "display-activation-link": "Hiển thị link kích hoạt",
-        "send-activation-mail": "Gửi email kích hoạt",
+        "activation-method": "Activation method",
+        "display-activation-link": "Display activation link",
+        "send-activation-mail": "Send activation mail",
         "activation-link": "User activation link",
         "activation-link-text": "In order to activate user use the following <a href='{{activationLink}}' target='_blank'>activation link</a> :",
         "copy-activation-link": "Copy activation link",
