--- a/src/assets/locale/locale.constant-en_US.json
+++ b/src/assets/locale/locale.constant-en_US.json
@@ -3162,6 +3162,7 @@
             "zh_CN": "简体中文",
             "zh_TW": "繁體中文",
             "en_US": "English",
+            "vi_VN": "Tiếng Việt",
             "it_IT": "Italiano",
             "ko_KR": "한국어",
             "ru_RU": "Русский",
