logout,profile,languale

--- a/src/assets/locale/locale.constant-en_US.json
+++ b/src/assets/locale/locale.constant-en_US.json
@@ -602,7 +602,8 @@
         "enter-search": "Enter search",
         "created-time": "Created time",
         "loading": "Loading...",
-        "proceed": "Proceed"
+        "proceed": "Proceed",
+        "header": "Supervisory Control and Data Acquisition"
     },
     "content-type": {
         "json": "Json",
