--- a/src/assets/locale/locale.constant-vi_VN.json
+++ b/src/assets/locale/locale.constant-vi_VN.json
@@ -12,7 +12,7 @@
     },
     "action": {
         "activate": "Kích hoạt",
-        "suspend": "Tạm đình chỉ",
+        "suspend": "Tạm hoãn",
         "save": "Lưu",
         "saveAs": "Lưu tại",
         "cancel": "Hủy",
@@ -30,51 +30,51 @@
         "unassign": "Thu hồi",
         "share": "Chia sẻ",
         "make-private": "Make private",
-        "apply": "Apply",
-        "apply-changes": "Apply changes",
-        "edit-mode": "Edit mode",
+        "apply": "Xác nhận",
+        "apply-changes": "Xác nhận thay đổi",
+        "edit-mode": "Chỉnh sửa",
         "enter-edit-mode": "Enter edit mode",
-        "decline-changes": "Decline changes",
-        "close": "Close",
-        "back": "Back",
-        "run": "Run",
-        "sign-in": "Sign in!",
-        "edit": "Edit",
-        "view": "View",
-        "create": "Create",
-        "drag": "Drag",
-        "refresh": "Refresh",
-        "undo": "Undo",
-        "copy": "Copy",
-        "paste": "Paste",
+        "decline-changes": "Hủy bỏ thau đổi",
+        "close": "Đóng",
+        "back": "Quay lại",
+        "run": "Chạy",
+        "sign-in": "Đăng nhập!",
+        "edit": "Chỉnh sửa",
+        "view": "Xem",
+        "create": "Thêm mới",
+        "drag": "Kéo",
+        "refresh": "Làm mới",
+        "undo": "Hoàn tác",
+        "copy": "Sao chép",
+        "paste": "Dán",
         "copy-reference": "Copy reference",
         "paste-reference": "Paste reference",
-        "import": "Import",
-        "export": "Export",
+        "import": "Nhập",
+        "export": "Xuất",
         "share-via": "Share via {{provider}}",
-        "continue": "Continue",
-        "discard-changes": "Discard Changes",
-        "download": "Download",
+        "continue": "Tiếp tục",
+        "discard-changes": "Loại bỏ thay đổi",
+        "download": "Tai xuống",
         "next-with-label": "Next: {{label}}",
-        "read-more": "Read more",
-        "hide": "Hide"
+        "read-more": "Đọc thêm",
+        "hide": "Ẩn"
     },
     "aggregation": {
         "aggregation": "Aggregation",
         "function": "Data aggregation function",
         "limit": "Max values",
         "group-interval": "Grouping interval",
-        "min": "Min",
-        "max": "Max",
-        "avg": "Average",
-        "sum": "Sum",
+        "min": "Nhỏ nhất",
+        "max": "Lớn nhất",
+        "avg": "Trung bình",
+        "sum": "Tổng",
         "count": "Count",
         "none": "None"
     },
     "admin": {
         "general": "General",
-        "general-settings": "General Settings",
-        "home-settings": "Home Settings",
+        "general-settings": "Cài đặt chung",
+        "home-settings": "Cài đặt trang chủ",
         "outgoing-mail": "Mail Server",
         "outgoing-mail-settings": "Outgoing Mail Server Settings",
         "system-settings": "Cài đặt hệ thống",
@@ -104,7 +104,7 @@
         "proxy-port-range": "Proxy port should be in a range from 1 to 65535.",
         "proxy-user": "Proxy user",
         "proxy-password": "Proxy password",
-        "change-password": "Change password",
+        "change-password": "Đổi mật khẩu",
         "send-test-mail": "Send test mail",
         "sms-provider": "SMS provider",
         "sms-provider-settings": "SMS provider settings",
@@ -242,9 +242,9 @@
         }
     },
     "alarm": {
-        "alarm": "Alarm",
-        "alarms": "Alarms",
-        "select-alarm": "Select alarm",
+        "alarm": "Cảnh báo",
+        "alarms": "Cảnh báo",
+        "select-alarm": "CHọn cảnh báo",
         "no-alarms-matching": "No alarms matching '{{entity}}' were found.",
         "alarm-required": "Alarm is required",
         "alarm-status": "Alarm status",
@@ -264,13 +264,13 @@
             "CLEARED_ACK": "Cleared Acknowledged"
         },
         "no-alarms-prompt": "No alarms found",
-        "created-time": "Created time",
+        "created-time": "Thời gian tạo",
         "type": "Type",
         "severity": "Severity",
         "originator": "Originator",
         "originator-type": "Originator type",
-        "details": "Details",
-        "status": "Status",
+        "details": "Chi tiết",
+        "status": "Trạng thái",
         "alarm-details": "Alarm details",
         "start-time": "Start time",
         "end-time": "End time",
@@ -602,7 +602,8 @@
         "enter-search": "Enter search",
         "created-time": "Created time",
         "loading": "Loading...",
-        "proceed": "Proceed"
+        "proceed": "Proceed",
+        "header": "Kiểm soát giám sát và thu thập dữ liệu"
     },
     "content-type": {
         "json": "Json",
@@ -2429,7 +2430,7 @@
         "resource": "Resource",
         "resource-library-details": "Resource details",
         "resource-type": "Resource type",
-        "resources-library": "Resources library",
+        "resources-library": "Thư viện tài nguyên",
         "search": "Search resources",
         "selected-resources": "{ count, plural, 1 {1 resource} other {# resources} } selected",
         "system": "System",
