--- a/src/assets/locale/locale.constant-vi_VN.json
+++ b/src/assets/locale/locale.constant-vi_VN.json
@@ -1,4 +1,9 @@
 {
+    "custom_k": {
+        "log-out": "Đăng xuất",
+        "notifications": "Thông báo",
+        "full-screen": "Toàn màn hình"
+    },
     "access": {
         "unauthorized": "Không có quyền",
         "unauthorized-access": "Không có quyền truy cập",
@@ -390,7 +395,7 @@
         "no-asset-types-matching": "No asset types matching '{{entitySubtype}}' were found.",
         "asset-type-list-empty": "No asset types selected.",
         "asset-types": "Asset types",
-        "name": "Name",
+        "name": "Tên",
         "name-required": "Name is required.",
         "description": "Description",
         "type": "Type",
@@ -600,7 +605,7 @@
         "enter-username": "Nhập vào tên đăng nhập",
         "enter-password": "Nhập vào mật khẩu",
         "enter-search": "Enter search",
-        "created-time": "Created time",
+        "created-time": "Thời gian tạo",
         "loading": "Loading...",
         "proceed": "Proceed",
         "header": "Kiểm soát giám sát và thu thập dữ liệu"
@@ -823,7 +828,7 @@
         "add-state": "Add dashboard state",
         "no-states-text": "No states found",
         "state": "Dashboard state",
-        "state-name": "Name",
+        "state-name": "Tên",
         "state-name-required": "Dashboard state name is required.",
         "state-id": "State Id",
         "state-id-required": "Dashboard state id is required.",
@@ -875,7 +880,7 @@
     },
     "datasource": {
         "type": "Datasource type",
-        "name": "Name",
+        "name": "Tên",
         "label": "Nhãn hiệu",
         "add-datasource-prompt": "Please add datasource"
     },
@@ -1002,7 +1007,7 @@
         "no-device-types-matching": "No device types matching '{{entitySubtype}}' were found.",
         "device-type-list-empty": "No device types selected.",
         "device-types": "Device types",
-        "name": "Name",
+        "name": "Tên",
         "name-required": "Name is required.",
         "description": "Description",
         "label": "Nhãn hiệu",
@@ -1058,7 +1063,7 @@
         "copyId": "Copy device profile Id",
         "new-device-profile-name": "Device profile name",
         "new-device-profile-name-required": "Device profile name is required.",
-        "name": "Name",
+        "name": "Tên",
         "name-required": "Name is required.",
         "type": "Profile type",
         "type-required": "Profile type is required.",
@@ -1424,7 +1429,7 @@
         "delete-edge-text": "Be careful, after the confirmation the edge and all related data will become unrecoverable.",
         "delete-edges-title": "Are you sure you want to edge { count, plural, 1 {1 edge} other {# edges} }?",
         "delete-edges-text": "Be careful, after the confirmation all selected edges will be removed and all related data will become unrecoverable.",
-        "name": "Name",
+        "name": "Tên",
         "name-starts-with": "Edge name starts with",
         "name-required": "Name is required.",
         "edge-license-key": "Edge License Key",
@@ -1663,8 +1668,8 @@
         "type-ota-package": "OTA package"
     },
     "entity-field": {
-        "created-time": "Created time",
-        "name": "Name",
+        "created-time": "Thời gian tạo",
+        "name": "Tên",
         "type": "Type",
         "first-name": "Họ",
         "last-name": "Tên",
@@ -1744,8 +1749,8 @@
         "no-entity-view-types-matching": "No entity view types matching '{{entitySubtype}}' were found.",
         "entity-view-type-list-empty": "No entity view types selected.",
         "entity-view-types": "Entity View types",
-        "created-time": "Created time",
-        "name": "Name",
+        "created-time": "Thời gian tạo",
+        "name": "Tên",
         "name-required": "Name is required.",
         "description": "Description",
         "events": "Events",
@@ -2194,7 +2199,7 @@
         "import-csv-number-columns-error": "A file should contain at least two columns",
         "import-csv-invalid-format-error": "Invalid file format. Line: '{{line}}'",
         "column-type": {
-            "name": "Name",
+            "name": "Tên",
             "type": "Type",
             "label": "Nhãn hiệu",
             "column-type": "Column type",
@@ -2442,7 +2447,7 @@
         "rulechains": "Rule chains",
         "root": "Root",
         "delete": "Delete rule chain",
-        "name": "Name",
+        "name": "Tên",
         "name-required": "Name is required.",
         "description": "Description",
         "add": "Add Rule Chain",
@@ -2504,7 +2509,7 @@
         "search": "Search nodes",
         "open-node-library": "Open node library",
         "add": "Add rule node",
-        "name": "Name",
+        "name": "Tên",
         "name-required": "Name is required.",
         "type": "Type",
         "description": "Description",
@@ -2623,7 +2628,7 @@
         "set-default": "Make tenant profile default",
         "delete": "Delete tenant profile",
         "copyId": "Copy tenant profile Id",
-        "name": "Name",
+        "name": "Tên",
         "name-required": "Name is required.",
         "data": "Profile data",
         "profile-configuration": "Profile configuration",
@@ -3008,7 +3013,7 @@
         "no-actions-text": "No actions found",
         "action-source": "Action source",
         "action-source-required": "Action source is required.",
-        "action-name": "Name",
+        "action-name": "Tên",
         "action-name-required": "Action name is required.",
         "action-name-not-unique": "Another action with the same name already exists.<br/>Action name should be unique within the same action source.",
         "action-icon": "Icon",
