filter_select_done

--- a/src/assets/locale/locale.constant-en_US.json
+++ b/src/assets/locale/locale.constant-en_US.json
@@ -2,7 +2,8 @@
     "custom_k": {
         "log-out": "Log out",
         "notifications": "Notifications",
-        "full-screen": "Full screen"
+        "full-screen": "Full screen",
+        "lang-img": "assets/img_lang_en.png"
     },
     "access": {
         "unauthorized": "Không có quyền",
