--- a/src/assets/locale/locale.constant-vi_VN.json
+++ b/src/assets/locale/locale.constant-vi_VN.json
@@ -11,11 +11,31 @@
         "unauthorized-access-text": "Bạn cần đăng nhập để truy cập tài nguyên này",
         "access-forbidden": "Cấm truy cập",
         "access-forbidden-text": "You haven't access rights to this location!<br/>Try to sign in with different user if you still wish to gain access to this location.",
-        "refresh-token-expired": "Session has expired",
+        "refresh-token-expired": "Phiên đăng nhập hết hạn",
         "refresh-token-failed": "Unable to refresh session",
-        "permission-denied": "Permission Denied",
+        "permission-denied": "Quyền truy cập bị từ chối",
         "permission-denied-text": "You don't have permission to perform this operation!"
     },
+    "Quản lý người dùng": "Quản lý người dùng",
+    "Quản lý thiết bị IOT": "Quản lý thiết bị IOT",
+    "Quản lý công đoạn": "Quản lý công đoạn",
+    "Giám sát": "Giám sát",
+    "Quản lý nhóm lỗi": "Quản lý nhóm lỗi",
+    "Cấu hình": "Cấu hình",
+    "Quản lý lỗi": "Quản lý lỗi",
+    "Khai báo lỗi": "Khai báo lỗi ",
+    "Khai báo lỗi cho lệnh sản xuất": "Khai báo lỗi cho lệnh sản xuất",
+    "Khai báo lỗi HMI": "Khai báo lỗi HMI",
+    "Quản lý Sản phẩm": "Quản lý Sản phẩm",
+    "Quản lý Nhóm Sản phẩm": "Quản lý Nhóm Sản phẩm",
+    "Khai báo serial_sản lượng": "Khai báo serial_sản lượng",
+    "Quản lý dây chuyền": "Quản lý dây chuyền",
+    "Đối tượng": "Đối tượng",
+    "Thiết bị": "Thiết bị",
+    "Hồ sơ thiết bị": "Hồ sơ thiết bị",
+    "OTP updates": "OTP updates",
+    "Entity Views": "Entity Views",
+    "Rule chains": "Rule chains",
     "action": {
         "activate": "Kích hoạt",
         "suspend": "Tạm hoãn",
@@ -39,7 +59,7 @@
         "apply": "Xác nhận",
         "apply-changes": "Xác nhận thay đổi",
         "edit-mode": "Chỉnh sửa",
-        "enter-edit-mode": "Enter edit mode",
+        "enter-edit-mode": "Bật chế độ chỉnh sửa",
         "decline-changes": "Hủy bỏ thau đổi",
         "close": "Đóng",
         "back": "Quay lại",
@@ -78,7 +98,7 @@
         "none": "None"
     },
     "admin": {
-        "general": "General",
+        "general": "Chung",
         "general-settings": "Cài đặt chung",
         "home-settings": "Cài đặt trang chủ",
         "outgoing-mail": "Mail Server",
@@ -584,9 +604,9 @@
         "type-timeseries-deleted": "Telemetry deleted"
     },
     "confirm-on-exit": {
-        "message": "You have unsaved changes. Are you sure you want to leave this page?",
-        "html-message": "You have unsaved changes.<br/>Are you sure you want to leave this page?",
-        "title": "Unsaved changes"
+        "message": "Những thay đổi chưa được lưu. Bạn có chắc chắn muốn thoát?",
+        "html-message": "Những thay đổi chưa được lưu.<br/>Bạn có chắc chắn muốn thoát?",
+        "title": "Những thay đổi chưa được lưu"
     },
     "contact": {
         "country": "Đất nước",
@@ -630,8 +650,8 @@
         "public-assets": "Public Assets",
         "public-edges": "Public Edges",
         "public-entity-views": "Public Entity Views",
-        "add": "Add Customer",
-        "delete": "Delete customer",
+        "add": "Thêm khách hàng",
+        "delete": "Xóa customer",
         "manage-customer-users": "Manage customer users",
         "manage-customer-devices": "Manage customer devices",
         "manage-customer-dashboards": "Manage customer dashboards",
@@ -666,7 +686,7 @@
         "select-default-customer": "Select default customer",
         "default-customer": "Default customer",
         "default-customer-required": "Default customer is required in order to debug dashboard on Tenant level",
-        "search": "Search customers",
+        "search": "Tìm kiếm",
         "selected-customers": "{ count, plural, 1 {1 customer} other {# customers} } selected",
         "edges": "Customer edge instances",
         "manage-edges": "Manage edges"
@@ -919,7 +939,7 @@
         "device-list-empty": "No devices selected.",
         "device-name-filter-required": "Device name filter is required.",
         "device-name-filter-no-device-matched": "No devices starting with '{{device}}' were found.",
-        "add": "Add Device",
+        "add": "Thêm thiết bị",
         "assign-to-customer": "Assign to customer",
         "assign-device-to-customer": "Assign Device(s) To Customer",
         "assign-device-to-customer-text": "Please select the devices to assign to the customer",
@@ -1926,7 +1946,7 @@
         "response-timeout": "Response timeout in milliseconds",
         "topic-expression": "Topic expression",
         "client-scope": "Client scope",
-        "add-device": "Add device",
+        "add-device": "Thêm thiết bị",
         "opc-server": "Servers",
         "opc-add-server": "Add server",
         "opc-add-server-prompt": "Please add server",
@@ -2369,9 +2389,9 @@
     },
     "profile": {
         "profile": "Profile",
-        "last-login-time": "Last Login",
-        "change-password": "Change Password",
-        "current-password": "Current password"
+        "last-login-time": "Lần đăng nhập cuối",
+        "change-password": "Đổi mật khẩu",
+        "current-password": "Mật khẩu hiện tại"
     },
     "relation": {
         "relations": "Relations",
@@ -2439,7 +2459,7 @@
         "resources-library": "Thư viện tài nguyên",
         "search": "Search resources",
         "selected-resources": "{ count, plural, 1 {1 resource} other {# resources} } selected",
-        "system": "System",
+        "system": "Hệ thống",
         "title": "Title",
         "title-required": "Title is required."
     },
@@ -2465,7 +2485,7 @@
         "rulechain-details": "Rule chain details",
         "details": "Details",
         "events": "Events",
-        "system": "System",
+        "system": "Hệ thống",
         "import": "Import rule chain",
         "export": "Export rule chain",
         "export-failed-error": "Unable to export rule chain: {{error}}",
@@ -2961,7 +2981,7 @@
         "delete-widgets-bundles-text": "Be careful, after the confirmation all selected widgets bundles will be removed and all related data will become unrecoverable.",
         "no-widgets-bundles-matching": "No widgets bundles matching '{{widgetsBundle}}' were found.",
         "widgets-bundle-required": "Widgets bundle is required.",
-        "system": "System",
+        "system": "Hệ thống",
         "import": "Import widgets bundle",
         "export": "Export widgets bundle",
         "export-failed-error": "Unable to export widgets bundle: {{error}}",
