--- a/src/assets/locale/locale.constant-en_US.json
+++ b/src/assets/locale/locale.constant-en_US.json
@@ -6,10 +6,10 @@
         "lang-img": "assets/img_lang_en.png"
     },
     "access": {
-        "unauthorized": "Không có quyền",
-        "unauthorized-access": "Không có quyền truy cập",
-        "unauthorized-access-text": "Bạn cần đăng nhập để truy cập tài nguyên này",
-        "access-forbidden": "Cấm truy cập",
+        "unauthorized": "Unauthorized",
+        "unauthorized-access": "Unauthorized Access",
+        "unauthorized-access-text": "You should sign in to have access to this resource!",
+        "access-forbidden": "Access Forbidden",
         "access-forbidden-text": "You haven't access rights to this location!<br/>Try to sign in with different user if you still wish to gain access to this location.",
         "refresh-token-expired": "Session has expired",
         "refresh-token-failed": "Unable to refresh session",
@@ -37,24 +37,24 @@
     "Entity Views": "Entity Views",
     "Rule chains": "Rule chains",
     "action": {
-        "activate": "Kích hoạt",
-        "suspend": "Tạm đình chỉ",
-        "save": "Lưu",
-        "saveAs": "Lưu tại",
-        "cancel": "Hủy",
-        "ok": "Đồng ý",
-        "delete": "Xóa",
-        "add": "Thêm",
-        "yes": "Chấp nhận",
-        "no": "Từ chối",
-        "update": "Cập nhật",
-        "remove": "Gỡ bỏ",
-        "select": "Lựa chọn",
-        "search": "Tìm kiếm",
-        "clear-search": "Xóa tìm kiếm",
-        "assign": "Giao",
-        "unassign": "Thu hồi",
-        "share": "Chia sẻ",
+        "activate": "Activate",
+        "suspend": "Suspend",
+        "save": "Save",
+        "saveAs": "Save as",
+        "cancel": "Cancel",
+        "ok": "OK",
+        "delete": "Delete",
+        "add": "Add",
+        "yes": "Yes",
+        "no": "No",
+        "update": "Update",
+        "remove": "Remove",
+        "select": "Select",
+        "search": "Search",
+        "clear-search": "Clear search",
+        "assign": "Assign",
+        "unassign": "Unassign",
+        "share": "Share",
         "make-private": "Make private",
         "apply": "Apply",
         "apply-changes": "Apply changes",
@@ -391,13 +391,13 @@
         "any-relation": "any"
     },
     "asset": {
-        "asset": "Assets",
+        "asset": "Asset",
         "assets": "Assets",
-        "management": "Quản lý đối tượng",
-        "view-assets": "Hiển thị chi tiết đối tượng",
-        "add": "Thêm đối tượng",
-        "assign-to-customer": "Assign to Khách hàng",
-        "assign-asset-to-customer": "Giao đối tượng cho khách hàng",
+        "management": "Asset management",
+        "view-assets": "View Assets",
+        "add": "Add Asset",
+        "assign-to-customer": "Assign to customer",
+        "assign-asset-to-customer": "Assign Asset(s) To Customer",
         "assign-asset-to-customer-text": "Please select the assets to assign to the customer",
         "no-assets-text": "No assets found",
         "assign-to-customer-text": "Please select the customer to assign the asset(s)",
@@ -457,7 +457,7 @@
         "help-text": "Use '%' according to need: '%asset_name_contains%', '%asset_name_ends', 'asset_starts_with'.",
         "import": "Import assets",
         "asset-file": "Asset file",
-        "label": "Nhãn hiệu",
+        "label": "Label",
         "search": "Search assets",
         "assign-asset-to-edge": "Assign Asset(s) To Edge",
         "unassign-asset-from-edge": "Unassign asset",
@@ -609,11 +609,11 @@
         "title": "Unsaved changes"
     },
     "contact": {
-        "country": "Đất nước",
-        "city": "Thành phố",
-        "state": "Tỉnh",
-        "postal-code": "Mã Zip-code",
-        "postal-code-invalid": "Sai code",
+        "country": "Country",
+        "city": "City",
+        "state": "State / Province",
+        "postal-code": "Zip / Postal Code",
+        "postal-code-invalid": "Invalid Zip / Postal Code format.",
         "address": "Address",
         "address2": "Address 2",
         "phone": "Phone",
@@ -621,10 +621,10 @@
         "no-address": "No address"
     },
     "common": {
-        "username": "Tên đăng nhập",
-        "password": "Mật khẩu",
-        "enter-username": "Nhập vào tên đăng nhập",
-        "enter-password": "Nhập vào mật khẩu",
+        "username": "Username",
+        "password": "Password",
+        "enter-username": "Enter username",
+        "enter-password": "Enter password",
         "enter-search": "Enter search",
         "created-time": "Created time",
         "loading": "Loading...",
@@ -673,7 +673,7 @@
         "manage-assets": "Manage assets",
         "manage-devices": "Manage devices",
         "manage-dashboards": "Manage dashboards",
-        "title": "Nhóm khách hàng",
+        "title": "Customer group",
         "title-required": "Title is required.",
         "description": "Description",
         "details": "Details",
@@ -1692,18 +1692,18 @@
         "created-time": "Created time",
         "name": "Name",
         "type": "Type",
-        "first-name": "Họ",
-        "last-name": "Tên",
+        "first-name": "First name",
+        "last-name": "Last name",
         "email": "Email",
-        "title": "Nhóm khách hàng",
-        "country": "Đất nước",
+        "title": "Title",
+        "country": "Country",
         "state": "State",
-        "city": "Thành phố",
+        "city": "City",
         "address": "Address",
         "address2": "Address 2",
         "zip": "Zip",
         "phone": "Phone",
-        "label": "Nhãn hiệu"
+        "label": "Label"
     },
     "entity-view": {
         "entity-view": "Entity View",
@@ -2791,19 +2791,19 @@
         "interval": "Interval"
     },
     "user": {
-        "user": "Người dùng",
-        "users": "Người dùng",
-        "customer-users": "KH",
-        "tenant-admins": "Quản trị",
+        "user": "User",
+        "users": "Users",
+        "customer-users": "Customer Users",
+        "tenant-admins": "Tenant Admins",
         "sys-admin": "System administrator",
         "tenant-admin": "Tenant administrator",
-        "customer": "Khách hàng",
+        "customer": "Customer",
         "anonymous": "Anonymous",
-        "add": "Thêm người dùng",
-        "delete": "Xóa người dùng",
-        "add-user-text": "Thêm mới người dùng",
-        "no-users-text": "Không tìm thấy người dùng",
-        "user-details": "Chi tiết người dùng",
+        "add": "Add User",
+        "delete": "Delete user",
+        "add-user-text": "Add new user",
+        "no-users-text": "No users found",
+        "user-details": "User details",
         "delete-user-title": "Are you sure you want to delete the user '{{userEmail}}'?",
         "delete-user-text": "Be careful, after the confirmation the user and all related data will become unrecoverable.",
         "delete-users-title": "Are you sure you want to delete { count, plural, 1 {1 user} other {# users} }?",
@@ -2812,19 +2812,19 @@
         "activation-email-sent-message": "Activation email was successfully sent!",
         "resend-activation": "Resend activation",
         "email": "Email",
-        "email-required": "Yêu cầu Email",
-        "invalid-email-format": "Tên đăng nhập không phải email",
-        "first-name": "Họ",
-        "last-name": "Và Tên",
+        "email-required": "Email is required.",
+        "invalid-email-format": "Invalid email format.",
+        "first-name": "First Name",
+        "last-name": "Last Name",
         "description": "Description",
         "default-dashboard": "Default dashboard",
         "always-fullscreen": "Always fullscreen",
         "select-user": "Select user",
         "no-users-matching": "No users matching '{{entity}}' were found.",
         "user-required": "User is required",
-        "activation-method": "Phương thức kích hoạt",
-        "display-activation-link": "Hiển thị link kích hoạt",
-        "send-activation-mail": "Gửi email kích hoạt",
+        "activation-method": "Activation method",
+        "display-activation-link": "Display activation link",
+        "send-activation-mail": "Send activation mail",
         "activation-link": "User activation link",
         "activation-link-text": "In order to activate user use the following <a href='{{activationLink}}' target='_blank'>activation link</a> :",
         "copy-activation-link": "Copy activation link",
